# starter-code-python

./: .flake8  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint  mkdocs.yml  pyproject.toml
docs/: index.md
