[tool.poetry]
name = "starter-code-python"
version = "0.1.0"
description = ""
authors = ["Domenico Corvasce <dcorvasce@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.0"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
